examples/test/testpolicy14180.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14180
  namespace: namespace198
spec:
  podSelector:
    matchLabels:
      key0: value14
      key47: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value11
          key19: value15
      podSelector:
        matchLabels:
          key24: value22
          key38: value16
          key26: value15
